# Berlin-red-list

./: .gitignore  Process sample.ipynb  README.md  pyproject.toml  requirements.txt
Algae_ Characeae/: Algae_ Characeae.ipynb
Algae_Rhodophyta_Phaeophyceae/: Algae_Rhodophyta_Phaeophyceae.ipynb
Amphibia/: Amphibia.ipynb
Araneae and Opiliones/:  Araneae and Opiliones.ipynb
Bryophyta/: Bryophyta.ipynb
Extraction/Algae_ Characeae/: Algae_ Characeae.ipynb
Extraction/Algae_Rhodophyta_Phaeophyceae/: Algae_Rhodophyta_Phaeophyceae.ipynb
Extraction/Amphibia/: Amphibia.ipynb
Extraction/Araneae and Opiliones/:  Araneae and Opiliones.ipynb
Extraction/Aves/: Aves.ipynb
Extraction/Bryophyta/: Bryophyta.ipynb
Extraction/Fungi_ Boletales/: Fungi_ Boletales.ipynb
Extraction/Fungi_Ustilaginales/: Fungi_Ustilaginales.ipynb
Extraction/Fungi_lichenicolen/: Fungi_lichenicolen.ipynb
Extraction/Lichens/: Lichens.ipynb
Extraction/Mammalia/: Mammalia.ipynb
Extraction/Mollusca/: Mollusca Gastropoda und Bivalvia.ipynb
Extraction/Pisces/: Pisces.ipynb
Extraction/Reptilia/: Reptiles.ipynb
Extraction/Vascular_Plants/: Vascular_plants.ipynb
Fungi_Ustilaginales/: Fungi_Ustilaginales.ipynb
Insecta/Chrysomelidae_ Megalopodidae - Leaf beetles/: Chrysomelidae_ Megalopodidae_Blattkäfer.ipynb
Insecta/Coleoptera Scarabaeoidea - Scarabs/: Coleoptera Scarabaeoidea Blatthornkäfer.ipynb
Insecta/Coleoptera Wasserkäfer/: Coleoptera Wasserkäfer.ipynb
Insecta/Diptera_Asilidae - Robber flies /: Process sample.ipynb  (+1 more)
Mammalia/: Mammalia.ipynb
Reptilia/: Reptiles.ipynb
(+137 files in other folders)
